<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteVariant"
    android:padding="@dimen/padding_default">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvStatHp"
        style="@style/TextPokemonDetailTitle"
        android:text="@string/hp"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvStatHpValue"
        style="@style/TextPokemonDetail"
        android:text="@string/number_example"
        app:layout_constraintBottom_toBottomOf="@+id/tvStatHp"
        app:layout_constraintEnd_toEndOf="@+id/tvStatDefenseValue"
        app:layout_constraintStart_toStartOf="@+id/tvStatDefenseValue"
        app:layout_constraintTop_toTopOf="@id/tvStatHp" />

    <ProgressBar
        android:id="@+id/pbHp"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_default"
        android:max="200"
        android:progress="70"
        android:progressBackgroundTint="@color/theme_red"
        android:progressTint="@color/theme_red"
        app:layout_constraintBottom_toBottomOf="@+id/tvStatHpValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvStatHpValue"
        app:layout_constraintTop_toTopOf="@+id/tvStatHpValue"
        tools:targetApi="lollipop" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvStatAttack"
        style="@style/TextPokemonDetailTitle"
        android:text="@string/attack"
        app:layout_constraintStart_toStartOf="@+id/tvStatHp"
        app:layout_constraintTop_toBottomOf="@+id/tvStatHp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvStatAttackValue"
        style="@style/TextPokemonDetail"
        android:text="@string/number_example"
        app:layout_constraintBottom_toBottomOf="@+id/tvStatAttack"
        app:layout_constraintEnd_toEndOf="@+id/tvStatHpValue"
        app:layout_constraintStart_toStartOf="@+id/tvStatHpValue"
        app:layout_constraintTop_toTopOf="@+id/tvStatAttack" />

    <ProgressBar
        android:id="@+id/pbAttack"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_default"
        android:max="200"
        android:progress="45"
        android:progressBackgroundTint="@color/theme_red"
        android:progressTint="@color/theme_red"
        app:layout_constraintBottom_toBottomOf="@+id/tvStatAttackValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvStatAttackValue"
        app:layout_constraintTop_toTopOf="@+id/tvStatAttackValue"
        tools:targetApi="lollipop" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvStatDefense"
        style="@style/TextPokemonDetailTitle"
        android:text="@string/defense"
        app:layout_constraintStart_toStartOf="@+id/tvStatAttack"
        app:layout_constraintTop_toBottomOf="@+id/tvStatAttack" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvStatDefenseValue"
        style="@style/TextPokemonDetail"
        android:text="@string/number_example"
        android:layout_marginStart="@dimen/margin_small"
        app:layout_constraintBottom_toBottomOf="@+id/tvStatDefense"
        app:layout_constraintStart_toEndOf="@id/tvStatDefense"
        app:layout_constraintTop_toTopOf="@+id/tvStatDefense"
        android:layout_marginLeft="@dimen/margin_small" />

    <ProgressBar
        android:id="@+id/pbDefense"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:max="200"
        android:progress="45"
        android:progressBackgroundTint="@color/theme_red"
        android:progressTint="@color/theme_red"
        app:layout_constraintBottom_toBottomOf="@+id/tvStatDefenseValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvStatDefenseValue"
        app:layout_constraintTop_toTopOf="@+id/tvStatDefenseValue"
        tools:targetApi="lollipop" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvStatSpAtk"
        style="@style/TextPokemonDetailTitle"
        android:text="@string/sp_atk"
        app:layout_constraintStart_toStartOf="@+id/tvStatDefense"
        app:layout_constraintTop_toBottomOf="@+id/tvStatDefense" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvStatSpAtkValue"
        style="@style/TextPokemonDetail"
        android:text="@string/number_example"
        app:layout_constraintBottom_toBottomOf="@+id/tvStatSpAtk"
        app:layout_constraintEnd_toEndOf="@+id/tvStatHpValue"
        app:layout_constraintStart_toStartOf="@+id/tvStatHpValue"
        app:layout_constraintTop_toTopOf="@+id/tvStatSpAtk" />

    <ProgressBar
        android:id="@+id/pbSpAtk"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_default"
        android:max="200"
        android:progress="45"
        android:progressBackgroundTint="@color/theme_red"
        android:progressTint="@color/theme_red"
        app:layout_constraintBottom_toBottomOf="@+id/tvStatSpAtkValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvStatSpAtkValue"
        app:layout_constraintTop_toTopOf="@+id/tvStatSpAtkValue"
        tools:targetApi="lollipop" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvStatSpDef"
        style="@style/TextPokemonDetailTitle"
        android:text="@string/sp_def"
        app:layout_constraintStart_toStartOf="@+id/tvStatSpAtk"
        app:layout_constraintTop_toBottomOf="@+id/tvStatSpAtk" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvStatSpDefValue"
        style="@style/TextPokemonDetail"
        android:text="@string/number_example"
        app:layout_constraintBottom_toBottomOf="@+id/tvStatSpDef"
        app:layout_constraintEnd_toEndOf="@+id/tvStatHpValue"
        app:layout_constraintStart_toStartOf="@+id/tvStatHpValue"
        app:layout_constraintTop_toTopOf="@+id/tvStatSpDef" />

    <ProgressBar
        android:id="@+id/pbSpDef"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_default"
        android:max="200"
        android:progress="45"
        android:progressBackgroundTint="@color/theme_red"
        android:progressTint="@color/theme_red"
        app:layout_constraintBottom_toBottomOf="@+id/tvStatSpDefValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvStatSpDefValue"
        app:layout_constraintTop_toTopOf="@+id/tvStatSpDefValue"
        tools:targetApi="lollipop" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvStatSpeed"
        style="@style/TextPokemonDetailTitle"
        android:text="@string/speed"
        app:layout_constraintStart_toStartOf="@+id/tvStatSpDef"
        app:layout_constraintTop_toBottomOf="@+id/tvStatSpDef" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvStatSpeedValue"
        style="@style/TextPokemonDetail"
        android:text="@string/number_example"
        app:layout_constraintBottom_toBottomOf="@+id/tvStatSpeed"
        app:layout_constraintEnd_toEndOf="@+id/tvStatHpValue"
        app:layout_constraintStart_toStartOf="@+id/tvStatHpValue"
        app:layout_constraintTop_toTopOf="@+id/tvStatSpeed" />

    <ProgressBar
        android:id="@+id/pbSpeed"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_default"
        android:max="200"
        android:progress="45"
        android:progressBackgroundTint="@color/theme_red"
        android:progressTint="@color/theme_red"
        app:layout_constraintBottom_toBottomOf="@+id/tvStatSpeedValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvStatSpeedValue"
        app:layout_constraintTop_toTopOf="@+id/tvStatSpeedValue"
        tools:targetApi="lollipop" />
</androidx.constraintlayout.widget.ConstraintLayout>